feat: add route shaping support, trip route geometry revisions, and vehicle motion simulation utilities